--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme
 title: [The title of your site]
 description: [A short description of your site's purpose]
-show_downloads: true
+show_downloads: false
