--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 title: OE5XRX
 description: Amateurfunkclub für Remote Stationen
+
+gems: [jekyll-mermaid]
+
+mermaid:
+  src: 'https://cdn.jsdelivr.net/npm/mermaid@11.3.0/dist/mermaid.min.js'
+  
