update remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,10 @@ description: Amateurfunkclub für Remote Stationen
 
 gems: [jekyll-mermaid]
 
+plugins:
+  - jekyll-remote-theme
+
 mermaid:
   src: 'https://cdn.jsdelivr.net/npm/mermaid@11.3.0/dist/mermaid.min.js'
-  
+
+remote_theme: benbalter/retlab
