--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ description: Amateurfunkclub für Remote Stationen
 
 gems: [jekyll-mermaid]
 
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: jekyll-theme-minimal
 
 mermaid:
   src: 'https://cdn.jsdelivr.net/npm/mermaid@11.3.0/dist/mermaid.min.js'
