--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Amateurfunkclub für Remote Stationen
 
 gems: [jekyll-mermaid]
 
-theme: jekyll-theme-minimal
+theme: just-the-docs
 
 mermaid:
   src: 'https://cdn.jsdelivr.net/npm/mermaid@11.3.0/dist/mermaid.min.js'
