--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,6 @@ mermaid:
 defaults:
   -
     scope:
-      path: "" # an empty string here means all files in the project
+      path: ""
     values:
       layout: "default"
