--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: OE5XRX
 description: Amateurfunkclub für Remote Stationen
 
 theme: just-the-docs
+favicon_ico: /favicon.ico
 
 mermaid:
   version: "11.3.0"
