--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: Amateurfunkclub für Remote Stationen
 
 theme: just-the-docs
 favicon_ico: /favicon.ico
+logo: "/Amateurfunkclub_Logo_compressed.jpg"
 
 mermaid:
   version: "11.3.0"
